--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 
 #title {
     position: absolute;
-    top: 15%;
+    top: 10%;
     left: 0;
     right: 0;
     width: 90%;    
@@ -14,19 +14,49 @@ html {
     text-align: center;
     font-family: Lato;
     font-weight: 300;
-    font-size: 50px;
     letter-spacing: 10px;
     margin-top: -60px;
     padding-left: 50px;
     padding-right: 50px;
     display: inline-block;
     white-space: nowrap;    
+    --min-height: 10px;
+    --max-width: 200px;
 }
 
 #title span {
     background: -webkit-linear-gradient(white, #38495a);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    font-size: 50px;
+}
+
+#date {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    width: 90%;    
+    color: #fff;
+    text-align: center;
+    font-family: Lato;
+    font-weight: 500;
+    letter-spacing: 5px;
+    margin-top: -100px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 10px;
+    display: inline-block;
+    white-space: nowrap;       
+    --min-height: 10px;
+    --max-width: 200px;
+}
+
+#date span {
+    background: -webkit-linear-gradient(white, #38495a);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 15px;
 }
 
 img {
@@ -36,6 +66,8 @@ img {
     --padding: 10px 10px;
     width: 75%;
     opacity: .65;
+    max-height: 400px;
+    max-width: 525px;
 }
 
 #stars_one {
