--- a/style.css
+++ b/style.css
@@ -4,7 +4,97 @@ html {
     background: radial-gradient(ellipse at top, #1b2735 0%, #090a0f 100%);
 }
 
-#title {
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper {
+    width: 100%;
+}
+
+.img-banner {
+    width: 100%;
+    max-height: 100px;
+    display: none;
+    opacity: .4;
+}
+
+.img-info {
+    width: 100%;
+}
+
+.img-info h2 {
+    text-align: center;
+    background: -webkit-linear-gradient(white, #38495a);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    padding: 20px 30px 10px;
+    font-family: Lato;
+    font-size: 20px;
+}           
+
+.img-info p {
+    color: #fff;
+    padding: 0px 50px 0px;
+    font-family: Lato;
+    font-size: 12px;
+    line-height: 20px;
+}           
+
+.img-cert {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    --padding: 10px 10px;
+    width: 85%;
+    opacity: .65;
+    --max-height: 400px;
+    --max-width: 525px;
+    box-shadow: 0px 0px 15px white;
+}
+
+.img-cert:hover {
+    opacity: 1.0;
+    scale: 103%;
+}
+
+@media only screen and (min-width: 768px) {
+    .img-banner {
+        display: block;
+        width: 100%;
+        padding-bottom: 0px;
+    }
+    .img-info h2 {
+        padding: 0px 30px 20px;
+        text-align: center;
+        font-size: 45px;
+    }           
+    .img-info p {
+        font-size: 18px;
+        line-height: 25px;
+        padding: 0px 75px 20px;        
+    }           
+}
+
+@media only screen and (min-width: 1000px) {
+    .img-banner {
+        display: block;
+        width: 100%;
+        padding-bottom: 0px;
+    }
+    .img-info h2 {
+        padding: 0px 30px 20px;
+        text-align: center;
+        font-size: 75px;
+    }           
+    .img-info p {
+        font-size: 25px;
+        line-height: 30px;
+        padding: 0px 150px 20px;        
+    }           
+}
+
     position: absolute;
     top: 10%;
     left: 0;
@@ -12,7 +102,6 @@ html {
     width: 90%;    
     color: #fff;
     text-align: center;
-    font-family: Lato;
     font-weight: 300;
     letter-spacing: 10px;
     margin-top: -60px;
@@ -25,10 +114,6 @@ html {
 }
 
 #title span {
-    background: -webkit-linear-gradient(white, #38495a);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-size: 50px;
 }
 
 #date {
@@ -59,17 +144,7 @@ html {
     font-size: 15px;
 }
 
-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    --padding: 10px 10px;
-    width: 75%;
-    opacity: .65;
-    max-height: 400px;
-    max-width: 525px;
-    box-shadow: 0px 0px 15px white;
-}
+
 
 #stars_one {
     width: 1px;
