--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html {
 
 .img-banner {
     width: 100%;
-    max-height: 100px;
+    max-height: 25px;
     display: none;
     opacity: .4;
 }
@@ -39,6 +39,7 @@ html {
     padding: 0px 50px 0px;
     font-family: Lato;
     font-size: 12px;
+    text-align: center;
     line-height: 20px;
 }           
 
@@ -75,6 +76,10 @@ html {
         line-height: 25px;
         padding: 0px 75px 20px;        
     }           
+    
+    .img-cert {
+        max-width: 350px;
+    }
 }
 
 @media only screen and (min-width: 1000px) {
@@ -93,20 +98,24 @@ html {
         line-height: 30px;
         padding: 0px 150px 20px;        
     }           
+    
+    .img-cert {
+        max-width: 450px;
+    }
 }
 /* 
-    position: absolute;
-    top: 10%;
-    left: 0;
-    right: 0;
-    width: 90%;    
-    color: #fff;
-    text-align: center;
-    font-weight: 300;
-    letter-spacing: 10px;
-    margin-top: -60px;
-    padding-left: 50px;
-    padding-right: 50px;
+position: absolute;
+top: 10%;
+left: 0;
+right: 0;
+width: 90%;    
+color: #fff;
+text-align: center;
+font-weight: 300;
+letter-spacing: 10px;
+margin-top: -60px;
+padding-left: 50px;
+padding-right: 50px;
     display: inline-block;
     white-space: nowrap;    
     --min-height: 10px;
