--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+
 html {
     height: 100%;
     overflow: hidden;
@@ -7,6 +9,37 @@ html {
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+.preloader {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: #353535;
+    overflow: hidden;
+    z-index: 1000;
+}
+
+.outer-space {
+    top: -200px;
+    width: 600px;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, 10%);
+}
+
+.rocket {
+    height: 300px;
+}
+
+.rocket_container {
+    position: absolute;
+    top: -200px;
+    left: 50%;
+    transform: translate(-50%, 350px);
 }
 
 .wrapper {
@@ -103,55 +136,6 @@ html {
         max-width: 450px;
     }
 }
-/* 
-position: absolute;
-top: 10%;
-left: 0;
-right: 0;
-width: 90%;    
-color: #fff;
-text-align: center;
-font-weight: 300;
-letter-spacing: 10px;
-margin-top: -60px;
-padding-left: 50px;
-padding-right: 50px;
-    display: inline-block;
-    white-space: nowrap;    
-    --min-height: 10px;
-    --max-width: 200px;
-}
-
-#title span {
-}
-
-#date {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    width: 90%;    
-    color: #fff;
-    text-align: center;
-    font-family: Lato;
-    font-weight: 500;
-    letter-spacing: 5px;
-    margin-top: -100px;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-bottom: 10px;
-    display: inline-block;
-    white-space: nowrap;       
-    --min-height: 10px;
-    --max-width: 200px;
-}
-
-#date span {
-    background: -webkit-linear-gradient(white, #38495a);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-size: 15px;
-} */
 
 
 
