--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html {
     background-color: #353535;
     overflow: hidden;
     z-index: 1000;
+    --display: none;
 }
 
 .outer-space {
@@ -36,6 +37,19 @@ html {
     animation: move 0.2s linear infinite alternate;
 }
 
+.preloader.preload-finish .rocket_container {
+    animation: finish 1.5s 1 ease forwards 5.0s;
+}
+
+@keyframes finish {
+    from {
+        top: -200px;
+    }
+    to {
+        top: -700px;
+    }
+}
+
 @keyframes move {
     from {
         transform: translateX(-5px);
@@ -43,14 +57,6 @@ html {
     to {
         transform: translateX(5px);
     }
-}
-
-#circle {
-    animation: falling-circles 0.2s linear infinite alternate;
-}
-
-@keyframes falling-circles {
-
 }
 
 @keyframes star-fall {
@@ -76,7 +82,7 @@ html {
     font-weight: 600;
     font-size: 1.5rem;
     position: absolute;
-    top: 550px;
+    top: 525px;
     white-space: nowrap;
     left: 50%;
     text-align: center;
