--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 html {
     height: 100%;
     overflow: hidden;
-    --background: radial-gradient(ellipse at top, #1b2735 0%, #090a0f 100%);
 }
 
 * {
@@ -13,10 +12,16 @@ html {
 }
 
 body {
-    display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: #090a0f;
+    --background: radial-gradient(ellipse at top, #1b2735 0%, #090a0f 100%);
+}
+
+body.light {
+    background-color: #FFF;
+    background: radial-gradient(ellipse at top, #1b2735 0%, #FFF 100%);
 }
 
 .preloader {
@@ -765,13 +770,47 @@ body {
 }
 
 .label {
+    position: absolute;
+    left: 120px;
+    top: 40px;
     width: 50px;
     height: 26px;
-    background-color: #111;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+    background-color: darkblue;
     display: flex;
     border-radius: 50px;
 }
 
 .fa-moon {
     color: #F1C40F;
+}
+
+.fa-sun {
+    color: #F39C12;
+}
+
+.ball {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    border-radius: 50%;
+    width: 22px;
+    height: 22px;
+    background-color: #FFF;
+    transition: transform 0.2s linear;
+}
+
+.checkbox {
+    opacity: 0;
+    position: absolute;
+}
+
+.checkbox:checked + .label .ball {
+    transform: translateX(24px);
+}
+
+.checkbox:checked + .label {
+    background-color: #111;
 }
