--- a/burger.css
+++ b/burger.css
@@ -68,12 +68,22 @@
     display: block;
     text-align: center;
     color: #FFF;
-    max-width: 300px;
+    max-width: 400px;
     font-size: 18px;
     margin: 0 auto 16px;
-    background-color: purple;
+    background-color: #191970;
     padding: 12px 16px;
     text-decoration: none;
+}
+
+#social-icons {
+    position: relative;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
 }
 
 .mobile-nav a:hover {
